--- a/src/componet/sidebar/spinAndWin/Spin_dash.css
+++ b/src/componet/sidebar/spinAndWin/Spin_dash.css
@@ -158,3 +158,8 @@
   align-items: center;
   margin-bottom: 11px;
 }
+.shere-button {
+  display: flex;
+  gap: 10px;
+  padding: 0px 8px !important;
+}
