--- a/src/ibdashbord/Affiliate.css
+++ b/src/ibdashbord/Affiliate.css
@@ -14,15 +14,15 @@
   font-weight: 800 !important;
   font-size: 18px;
 }
-table {
+#table {
   border-radius: 1em;
   overflow: hidden;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
-
+#table
 th,
-td {
+#table td {
   padding: 1em;
   border-bottom: 2px solid white;
   border: 1px solid rgb(179, 175, 175);
