--- a/src/componet/sidebar/ticket/ticket.css
+++ b/src/componet/sidebar/ticket/ticket.css
@@ -1,123 +1,135 @@
 .ticket-file-upload {
-    border-radius: 10px;
+  border-radius: 10px;
 }
-.ticket-file-upload .deposit-upload-image-preview{
-    width: 100%;
+.ticket-file-upload .deposit-upload-image-preview {
+  width: 100%;
 }
-.ticket-file-upload input[type='file']{
-    display: none;
+.ticket-file-upload input[type="file"] {
+  display: none;
 }
 .ticket-file-upload .site-button-color {
-    background-color: #2a3f73;
+  background-color: #2a3f73;
 }
 .ticket-disabled-button {
-    height: 40px;
-    width: 110px;
+  height: 40px;
+  width: 110px;
 }
 .ticket-disabled-button svg {
-    height: 30px;
-    top: 30px;
+  height: 30px;
+  top: 30px;
 }
 .view-ticket .card-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .view-ticket .ticket-status {
-    color: #fff;
-    font-size: 1rem;
-    line-height: 22px;
-    float: right;
-    min-width: 3rem;
-    height: 22px;
-    margin-left: 14px;
-    padding: 0 6px;
-    background-color: #ffc107;
-    border-radius: 5px;
+  color: #fff;
+  font-size: 1rem;
+  line-height: 22px;
+  float: right;
+  min-width: 3rem;
+  height: 22px;
+  margin-left: 14px;
+  padding: 0 6px;
+  background-color: #ffc107;
+  border-radius: 5px;
 }
 .action-section {
-    padding: 20px;
+  padding: 20px;
 }
 .action-section .input-section {
-    justify-content: space-between;
-    gap: 5px;
+  justify-content: space-between;
+  gap: 5px;
 }
 .view-ticket.card-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .action-section .send-message {
-    padding: 7px 25px;
+  padding: 7px 25px;
 }
 .font-size-18 {
-    font-size: 18px;
+  font-size: 18px;
 }
 .view-ticket-page .content-area {
-    height: calc(100vh - 400px);
-    overflow-y: auto;
+  height: calc(100vh - 400px);
+  overflow-y: auto;
 }
 .view-ticket-page .chat {
-    display: flex;
+  display: flex;
 }
 .view-ticket-page .chat img {
-    width: 50px;
-    height: 50px;
-    /* border-radius: 100%; */
+  width: 50px;
+  height: 50px;
+  /* border-radius: 100%; */
 }
 .view-ticket-page .chat.right-side {
-    display: flex;
-    justify-content: flex-end;
-    align-items: baseline;
-    gap: 15px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: baseline;
+  gap: 15px;
 }
 
 .view-ticket-page .chat P {
-    background-color: #2a3f73;
-    color: white;
-    padding: 5px 15px;
-    border-radius: 5px;
-    display: flex;
-    position: relative;
+  background-color: #2a3f73;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 5px;
+  display: flex;
+  position: relative;
 }
 .view-ticket-page .chat.right-side P::after {
-    content: '';
-    position: absolute;
-    width: 18px;
-    height: 12px;
-    border-top: 5px solid transparent;
-    border-left: 10px solid #2a3f73;
-    border-bottom: 5px solid transparent;
-    right: -18px;
-    top: 12px;
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 12px;
+  border-top: 5px solid transparent;
+  border-left: 10px solid #2a3f73;
+  border-bottom: 5px solid transparent;
+  right: -18px;
+  top: 12px;
 }
 .view-ticket-page .chat.left-side P::before {
-    content: '';
-    position: absolute;
-    width: 18px;
-    height: 12px;
-    border-top: 5px solid transparent;
-    border-left: 10px solid #2a3f73;
-    border-bottom: 5px solid transparent;
-    left: -9px;
-    top: 6px;
-    transform: rotate(305deg);
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 12px;
+  border-top: 5px solid transparent;
+  border-left: 10px solid #2a3f73;
+  border-bottom: 5px solid transparent;
+  left: -9px;
+  top: 6px;
+  transform: rotate(305deg);
 }
 .view-ticket-page .chat.left-side {
-    justify-content: flex-start;
-    display: flex;
-    align-items: baseline;
-    gap: 10px;
+  justify-content: flex-start;
+  display: flex;
+  align-items: baseline;
+  gap: 10px;
 }
 .send-message-disabled-button {
-    width: 100px;
-    position: relative;
+  width: 100px;
+  position: relative;
 }
 .send-message-disabled-button svg {
-    width: 30px;
-    margin-left: -15px;
+  width: 30px;
+  margin-left: -15px;
 }
-.ticketimage{
-    max-height: 40px;
-    width: auto;
+.ticketimage {
+  max-height: 40px;
+  width: auto;
+}
+.view-ticket .ticket-close {
+  background-color: #ff0707;
+  border-radius: 5px;
+  color: #fff;
+  float: right;
+  font-size: 1rem;
+  height: 22px;
+  line-height: 22px;
+  margin-left: 14px;
+  min-width: 3rem;
+  padding: 0 6px;
 }
